# SciExplorer

./: .gitignore  pyproject.toml  readme.md
example_runs/: example_define_new_simulator_analysis.ipynb  example_eom_run.ipynb  temp_result_bb47130a01ceb6db7044656cb33ba0637baabd1ecdd636e8f9238135d0f091f6_1
examples/: agentic_chat_example.ipynb  human_follow_up_question_example.ipynb  linear_exploration_example.ipynb  print_previous_conversation.ipynb
examples/analysis/: analysis_eom.py  analysis_quantum_spins.py  wave_analysis_tools.py
examples/prompts/: intermediate_prompts.md  system_prompts.md
examples/simulators/: equations_of_motion.py  quantum_spins.py  test_classical_systems.ipynb  test_quantum.ipynb  test_waves.ipynb  wave_sim_v2.py
examples/tasks/: tasks.md
sciexplorer/: general_analysis_tools.py  model_utils.py  parsers.py  physics_eom.py  physics_quantumspins.py  physics_waves.py  run_exp.py  runner.py  tool_utils.py
sciexplorer/analyze_conv_utils/: analyze_results.py  comparer.py  print_exp.py
sciexplorer/physics/: physics_eom.py  physics_waves.py
sciexplorer/runs/: genetic_algo.py  human_in_the_loop.py  linear_exploration.py
sciexplorer/tools/: arxiv_tools.py  coding_tools.py  general_tools.py  tool_utils.py
sciexplorer/utils/: model_specifics.py  print_utils.py  run_utils.py  tool_parsing_utils.py  vec_db_utils.py
