[build-system]
requires = [
  "setuptools>=68",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sciexplorer"
version = "0.1.0"
description = "SciExplorer builds on LLM APIs to create artificial scientist agents that can explore unknown systems by controlling experiments and running analysis code. "
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Maximilian Nägele"},
  {name = "Florian Marquardt"},
]
# Runtime dependencies inferred from imports
dependencies = [
  "jax>=0.4",
  "jaxlib>=0.4",
  "numpy>=2.0",
  "scipy>=1.9",
  "matplotlib>=3.6",
  "pillow>=9.5",
  "diffrax>=0.5",
  "optax>=0.1.7",
  "IPython>=8.0",
  "openai>=1.0"
]

[project.urls]
Homepage = "https://github.com/MaxNaeg/SciExplorer.git"
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sciexplorer*"]